Refactor tinylog 3